Thu Feb 12 19:42:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (compile_array_, defined_expr, iseq_compile_each): hide
	  and freeze internal literal objects, to prevent from modifying.
	  [ruby-dev:37959]

	* iseq.c (insn_operand_intern): copy internal literal objects.

	* insns.def (putstring, duparray): ditto.

	* string.c (rb_str_replace): exported.

Thu Feb 12 17:17:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_ungetc): calculates new position
	  before reallocation.  [Bug#1099]

Thu Feb 12 16:50:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: a patch to build on GNU/kOpenSolaris from Rober
	  Millan at [ruby-core:21888].

Thu Feb 12 15:28:04 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* iseq.c (simple_default_value): allow plain strings as default
	  values.

Wed Feb 11 18:09:41 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* gc.c (define_final, undefine_final): shouldn't add/remove finalizer
	  of forzen objects.

	* gc.c (undefine_final): should remove FL_FINALIZE flag.
	  [ruby-dev:37964] (also see [ruby-dev:37959])

Wed Feb 11 17:37:41 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (Socket.udp_server_sockets): call the block
	  if given.  close the sockets when the block exits.
	  (Socket.udp_server_loop): use udp_server_sockets in block form.

Wed Feb 11 17:34:16 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (Socket.tcp_server_sockets): call the block
	  if given.  close the sockets when the block exits.
	  (Socket.tcp_server_loop): use tcp_server_sockets in block form.

Wed Feb 11 17:01:52 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (Socket.unix_server_loop): use
	  unix_server_socket with a block.

Wed Feb 11 16:54:26 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (Socket.unix_server_socket): close the
	  socket when the block exits.

Wed Feb 11 16:50:59 2009  Tanaka Akira  <akr@fsij.org>
